# LearningOpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: vao.hpp  vbo.hpp
include/projects/: cube.hpp  model.hpp  model_vertices.hpp  pyramid.hpp  pyramid_vertices.hpp  space.hpp  space_vertices.hpp  triforce.hpp  triforce_vertices.hpp
include/system/: camera.hpp  ebo.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp  utils.hpp  vao.hpp  vbo.hpp  vertex.hpp
libs/include/GLFW/: glfw3.h
libs/include/glad/: glad.h
libs/include/glm/detail/: setup.hpp
libs/include/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp
libs/include/glm/gtc/: matrix_transform.hpp  noise.inl
libs/include/glm/simd/: platform.h
libs/include/json/: json.hpp
libs/include/stb/: stb_image.h
libs/lib/glad/: glad.c
shaders/: default.vert
shaders/model/: cube.frag  cube.vert  lamp.frag  model.frag  model.vert  outline.frag  outline.vert
shaders/pyramid/: pyramid.vert
shaders/space/: cube.frag  lamp.frag  lamp.vert  light.frag  light.vert  pyramid.frag  pyramid.vert  space.vert
shaders/triforce/: triforce.vert
src/: ebo.cpp  glad.c  main.cpp  shader.cpp  vao.cpp  vbo.cpp
src/projects/: cube.cpp  model.cpp  pyramid.cpp  space.cpp  triforce.cpp
src/system/: camera.cpp  ebo.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
